manifests/04-kohya-ss.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kohya-ss
  namespace: ollama
  labels:
    app: kohya-ss
    app.kubernetes.io/component: kohya-ss
    app.kubernetes.io/instance: kohya-ss
    app.kubernetes.io/name: kohya-ss
    app.kubernetes.io/part-of: ollama-app
    app.openshift.io/runtime: python
    app.openshift.io/runtime-namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kohya-ss
  template:
    metadata:
      labels:
        app: kohya-ss
        deployment: kohya-ss
    spec:
      containers:
        - name: kohya-ss
          image: 'quay.io/castawayegr/kohya-ss:v24.1.7'
          imagePullPolicy: IfNotPresent
          args:
            - '--xformers'
            - '--medvram'
          resources:
            requests:
              memory: 500Mi
            limits:
              memory: 6Gi
              nvidia.com/gpu: '1'
          ports:
            - containerPort: 7860
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            runAsNonRoot: true
            capabilities:
              drop:
              - ALL
          volumeMounts:
            - name: kohya-ss-data
              mountPath: /data/
      volumes:
        - name: kohya-ss-data
          persistentVolumeClaim:
            claimName: kohya-ss-data
      restartPolicy: Always
      tolerations:
        - key: nvidia.com/gpu
          operator: Exists
          effect: NoSchedule
---
kind: Service
apiVersion: v1
metadata:
  name: kohya-ss
  namespace: ollama
  labels:
    app: kohya-ss
    app.kubernetes.io/component: kohya-ss
    app.kubernetes.io/instance: kohya-ss
    app.kubernetes.io/name: kohya-ss
    app.kubernetes.io/part-of: ollama-app
spec:
  ports:
    - name: 7860-tcp
      protocol: TCP
      port: 7860
      targetPort: 7860
  selector:
    app: kohya-ss
    deployment: kohya-ss
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kohya-ss
  namespace: ollama
  labels:
    app: kohya-ss
    app.kubernetes.io/component: kohya-ss
    app.kubernetes.io/instance: kohya-ss
    app.kubernetes.io/name: kohya-ss
    app.kubernetes.io/part-of: ollama-app
spec:
  to:
    kind: Service
    name: kohya-ss
    weight: 100
  port:
    targetPort: 7860-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
